Update heading sizes, fix navbar toggle visibility, add oh navbar

--- a/css/oh-proj-theming.css
+++ b/css/oh-proj-theming.css
@@ -18,23 +18,45 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-weight: 300;
 }
 
+h1 {
+  font-size: 32px;
+}
+
+h2 {
+  font-size: 28px;
+}
+
+h3 {
+  font-size: 22px;
+}
+
+.navbar-toggler-icon.custom-toggler {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(74,193,200, 1.0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.navbar-toggler.custom-toggler {
+  border: 1px solid #4ac1c888;
+}
+
+
 code {
   background-color: inherit;
   color: #f7763e;
 }
 
-.nav > li > a, .navbar-form, .btn {
+.nav > li > a, .nav-item, .navbar-nav > .form-inline, .btn {
   padding-left: 10px;
   padding-right: 10px;
 }
 
 a,
-.navbar-default .navbar-nav > li > a,
-.navbar-default .navbar-brand {
+.navbar-open-humans > .navbar-nav > li > a,
+.navbar-open-humans > .navbar-brand {
   color: #4ac1c8;
 }
 
-.navbar-default {
+.navbar-default,
+.navbar-open-humans {
   border-radius: 0px;
   background-color: #fff;
   border: 0px;
@@ -45,13 +67,20 @@ a:focus,
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus,
 .navbar-default .navbar-brand:hover,
-.navbar-default .navbar-brand:focus {
+.navbar-default .navbar-brand:focus,
+.navbar-open-humans > .navbar-nav > li > a:hover,
+.navbar-open-humans > .navbar-nav > li > a:focus,
+.navbar-open-humuans > .navbar-brand:hover,
+.navbar-open-humans > .navbar-brand:focus {
   color: #3c9da3;
 }
 
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:focus,
-.navbar-default .navbar-nav > .active > a:hover {
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-open-humans > .navbar-nav > .active > a,
+.navbar-open-humans > .navbar-nav > .active > a:focus,
+.navbar-open-humans > .navbar-nav > .active > a:hover {
   color: #3c9da3;
   background-color: #e6f9fa;
 }
